--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="squareGrid"></div>
+        <div class="gridMap"></div>
     </body>
     <script src="javascript.js"></script>
 </html>
