Add grid sizing toggle button and event listener, but no functionality yet

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="gridSizeButton">
+            <button>Change Grid Size</button>
+        </div>
         <div class="gridMap"></div>
     </body>
     <script src="javascript.js"></script>
