Adjust grids to adjust size flexibly based on real estate

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <div class="gridSizeButton">
             <button>Change Grid Size</button>
         </div>
-        <div class="gridMap"></div>
+        <div class="content">
+            <div class="gridMap"></div>
+        </div>
     </body>
     <script src="javascript.js"></script>
 </html>
